# simple-serial-port

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SerialDevice.cpp  SerialDevice.hpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
examples/: CMakeLists.txt  ReadWrite.cpp  read_write.cpp
inc/: SerialDevice.hpp  SerialPortLinux.hpp  SerialPortWindows.hpp  device.hpp  serial.hpp  serial_device.hpp  serial_port.hpp  sp_error.hpp  sp_types.hpp  types.hpp
inc/platform/: sp_apple.hpp  sp_linux.hpp  sp_posix.hpp  sp_windows.hpp
lib/src/: serial_port.cpp
src/: CMakeLists.txt  SerialDevice.cpp  SerialPortLinux.cpp  SerialPortWindows.cpp  device.cpp  serial.cpp  serial_device.cpp  serial_port.cpp  sp_apple.cpp  sp_error.cpp  sp_linux.cpp  sp_posix.cpp  sp_windows.cpp
